--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dnd-by-gaymnight",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://dndbygaymnight.com"
   },
   "eslintConfig": {
     "extends": [
