--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,13 @@
 {
-  "short_name": "React App",
+  "short_name": "D&D by Gaymnight",
   "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "dragon-logo.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "dragon-logo.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
+    
   ],
   "start_url": ".",
   "display": "standalone",
